add series fuzzy search
